Fixed breadcrumb overlap issue

--- a/docroot/sites/all/themes/ambitious/sass/visual.scss
+++ b/docroot/sites/all/themes/ambitious/sass/visual.scss
@@ -67,7 +67,7 @@
 	.visual .img-holder .caption-frame .caption{
 		@include breakpoint($not-mobile){
 			padding: 0;
-			margin-top: -4em;
+			margin-top: -1.5em;
 		}
 	}
 
